--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,12 +8,13 @@
     "precommit": "lint-staged"
   },
   "dependencies": {
-    "antd": "^4.0.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
+    "@umijs/plugin-antd": "^0.3.0",
     "babel-eslint": "^9.0.0",
+    "babel-plugin-import": "^1.13.0",
     "eslint": "^5.4.0",
     "eslint-config-umi": "^1.4.0",
     "eslint-plugin-flowtype": "^2.50.0",
